<resources>
    <string name="app_name">LoftCoin</string>

    <!--WelcomeActivity-->
    <string name="welcome_title_1">Покупка и продажа</string>
    <string name="welcome_title_2">Курс криптовалют</string>
    <string name="welcome_title_3">Конвертер криптовалют</string>
    <string name="welcome_subtitle_1">Покупай, когда дешево. Продавай, когда дорого.</string>
    <string name="welcome_subtitle_2">Следи за курсом валют и вовремя реагируй на изменение динамики цен.</string>
    <string name="welcome_subtitle_3">Узнай, сколько эфира в 1.23 биткоина</string>

    <!--StartActivity-->
    <string name="start_app_name" translatable="false">LoftCoin</string>
    <string name="welcome_start_btn">Начать работу</string>

    <!--BottomNavigationMenu-->
    <string name="bottom_navigation_menu_wallets">Кошельки</string>
    <string name="bottom_navigation_menu_rate">Курс</string>
    <string name="bottom_navigation_menu_converter">Конвертер</string>

    <!--RateFragment-->
    <string name="rate_fragment_title">Курс криптовалют</string>
    <string name="rate_item_percent_change" translatable="false">%.2f%%</string>
    <string name="rate_item_positive_percent_change" translatable="false">+%.2f%%</string>
    <string name="currency_amount" translatable="false">%s %s</string>

    <!--ConverterFragment-->
    <string name="converter_fragment_title">Конвертер</string>
    <string name="converter_fragment_hint">Значение</string>
    <string name="converter_fragment_hint_result">Результат</string>

    <!-- CurrencyDialog -->
    <string name="currency_item_menu">Валюта</string>
    <string name="currency_choose_title">Выбор валюты</string>
    <string name="currency_usd" translatable="false">$</string>
    <string name="currency_usd_title" translatable="false">Dollar | USD</string>
    <string name="currency_eur" translatable="false">€</string>
    <string name="currency_eur_title" translatable="false">Euro | EUR</string>
    <string name="currency_rub" translatable="false">₽</string>
    <string name="currency_rub_title" translatable="false">Rouble | RUB</string>

    <!-- CurrencyBottomSheet -->
    <string name="currency_b_sheet_tv">Выбор вылюты</string>
    <string name="currency_b_sheet_curr_name" translatable="false">%s | %s</string>

    <!-- Wallets -->
    <string name="wallet_menu_item_new_wallet">Новый кошелек</string>
    <string name="toolbar_title_wallet">Кошельки</string>

    <!-- Notification -->
    <string name="notification_rate_change_body">Курс изменился %s</string>
    <string name="notification_rate_changed">Изменение курса</string>




</resources>
